message controllers added

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,7 @@
 MONGODB_URL="mongodb+srv://shreekant_02:shreekant123@cluster0.xzdpnpc.mongodb.net"
 PORT=8000
 JWT_SECRET="gs#secret"
+
+CLOUDINARY_CLOUD_NAME="dy57pd5vo"
+CLOUDINARY_API_KEY="238691645346822"
+CLOUDINARY_API_SECRET="JA6R4ImlMJpj0O8PsiLYxuCuiow"
